styles/layouts/fiive/_teacher.scss
.fiive_layout.teacher_layout {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  background-color: $bluegray-2;

  & > header.layout_header,
  & > footer.layout_footer {
    flex: 0 0 auto;
    min-height: 0;
  }

  .layout-body {
    flex: 1 1 auto;
    min-height: 0;
    display: flex;

    .page {
      width: 100%;
      padding: 12px;
      margin-bottom: 82px;
    }
  }

  button {
    appearance: none;
    border: 0;
    padding: 0;
    background-color: transparent;
  }

  & > header.layout_header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 12px 16px;
    border-bottom: 1px solid $bluegray-2;
    background-color: white;

    .left_header_box {
      display: flex;
      align-items: center;

      .back_button_box {
        display: flex;
        align-items: center;
        margin-right: 12px;
        cursor: pointer;
      }

      .fiive_logo_box {
        display: flex;
        align-items: center;
      }

      .devider_box {
        display: flex;
        align-items: center;
        margin: 0px 24px;
      }

      .fiive_class_infomation_box {
        display: flex;
        align-items: center;

        .teacher_profile_image_box {
          display: flex;
          align-items: center;
          margin-right: 8px;
        }

        .teacher_name_box {
          @include body-1-700;
          color: $bluegray-9;
        }
      }
    }

    .right_header_box {
      display: flex;
      align-items: center;

      div {
        padding: 6px;
        @include btn-sm-600;
        border-radius: 2px;
      }

      .live_status {
        margin-right: 6px;
        color: $bluegray-7;
        background-color: $bluegray-2;
      }

      .live_participant_number_box {
        display: flex;
        align-items: center;
        background-color: $bluegray-1;

        .live_participant_number {
          margin-left: 2px;
          color: $bluegray-8;
        }
      }
    }
  }

  /* teacher 레이아웃 footer 영역 */
  .layout-footer {
    position: fixed;
    bottom: 0px;
    display: flex;
    justify-content: space-between;
    width: 100%;
    padding: 12px;
    background-color: $bluegray-2;

    .widget_menu_wrapper,
    .quit_button_wrapper {
      display: flex;
      align-items: center;
      justify-content: center;
      flex-direction: column;
      @include btn-sm-600;
      border-radius: 8px;
      color: $bluegray-10;
      cursor: pointer;

      span {
        margin-top: 4px;
      }
    }

    .widget_menu_wrapper {
      height: 56px;
      padding: 10px 8px;
      border-radius: 1px solid $bluegray-1;
      box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.08),
        0px 4px 10px rgba(0, 0, 0, 0.06);
      background-color: white;

      div {
        display: flex;
        flex-direction: column;
        width: 75px;
        padding: 10px;
      }

      .live_chat_box {
        .chat_button_text.active {
          color: $fiivepurple-5;
        }
      }
    }

    .quit_button_wrapper {
      position: relative;
      padding: 10px;
      color: white;
      background-color: $red-5;
    }
  }

  /* live 방송 전, 라이브 나가기 버튼 위에 뜨는 popover css */
  @import '../../../components/VideoComponents/PopOver.scss';
}

.fiive_layout.teacher_layout::-webkit-scrollbar {
  display: none;
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .fiive_layout.teacher_layout {
    .layout-footer {
      justify-content: space-between;

      .empty_wrapper {
        display: none;
      }
    }
  }
}

@media screen and (max-width: 767px) {
  .fiive_layout.teacher_layout {
    .layout-footer {
      justify-content: space-between;

      .empty_wrapper {
        display: none;
      }
    }
  }
}

